<resources>
    <string name="app_name">Edu App</string>
    <string name="hint_search">What is economics</string>
    <string name="message">Hi Sign up with us!</string>
    <string name="login_message">Hey Welcome Back</string>
    <string name="direction_MessageSignIn">Dont have an Account</string>
    <string name="direction_MessageLogIn">Have an Account</string>
    <string name="trademark">Copyright EduApp 2026</string>
    <string name="chat_ai_page_title">Chat AI</string>
    <string name="hello_username">Hello Username</string>
    <string name="greeting_text">Hi Username,\nHow Can I Help you</string>
    <string name="search_placeholder">What is economics</string>
    <string name="student_name">Student Name</string>
</resources>