<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ChatAiPageActivity">

    <!-- Header -->
    <LinearLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="34dp"
        android:background="@drawable/rounded_header_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="22dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/hello_username"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_person"
            app:tint="@color/purple_accent" />
    </LinearLayout>

    <!-- Greeting Text -->
    <TextView
        android:id="@+id/greetingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:text="@string/greeting_text"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headerLayout"
        tools:textSize="44dp" />

    <!-- Search Bar -->

    <LinearLayout
        android:id="@+id/searchBarLayout"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingHorizontal="16dp"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="24dp"
        android:backgroundTintMode="src_in"
        android:clipToOutline="true"
        android:backgroundTint="@color/pale_violet"
        android:layoutDirection="ltr"
        android:elevation="4dp"
        android:background="@drawable/search_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/greetingText">

        <!-- Search Hint Text -->
        <EditText
            android:id="@+id/searchEditText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/search_placeholder"
            android:background="@android:color/transparent"
            android:textColorHint="@color/purple"
            android:textColor="@color/black"
            android:padding="0dp" />

        <!-- Search/Send Icon -->
        <ImageView
            android:id="@+id/sendButton"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_marginStart="12dp"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/sendbtn" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
